force-app/main/default/objects/User/fields/Chargeable__c.field-meta.xml
<CustomField>
    <fullName>Chargeable__c</fullName>
    <label>Chargeable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>