force-app/main/default/objects/User/fields/CP_Office__c.field-meta.xml
<CustomField>
    <fullName>CP_Office__c</fullName>
    <label>CP Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CP_Office</valueSetName>
    </valueSet>
</CustomField>