force-app/main/default/objects/User/fields/PA__c.field-meta.xml
<CustomField>
    <fullName>PA__c</fullName>
    <label>PA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>